Fix desktop-min-width tile alignment

--- a/app/states/root/_root_styles.scss
+++ b/app/states/root/_root_styles.scss
@@ -49,6 +49,7 @@
 
 	.index-project-wrapper
 	{
+		align-self: flex-start !important;
 		justify-content: flex-start !important;
 	}
 
